; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum1_kvdl.c_mlxsw_sp1_kvdl_part_occ.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum1_kvdl.c_mlxsw_sp1_kvdl_part_occ.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp1_kvdl_part = type { i32, %struct.mlxsw_sp1_kvdl_part_info }
%struct.mlxsw_sp1_kvdl_part_info = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlxsw_sp1_kvdl_part*)* @mlxsw_sp1_kvdl_part_occ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlxsw_sp1_kvdl_part_occ(%struct.mlxsw_sp1_kvdl_part* %0) #0 {
  %2 = alloca %struct.mlxsw_sp1_kvdl_part*, align 8
  %3 = alloca %struct.mlxsw_sp1_kvdl_part_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.mlxsw_sp1_kvdl_part* %0, %struct.mlxsw_sp1_kvdl_part** %2, align 8
  %7 = load %struct.mlxsw_sp1_kvdl_part*, %struct.mlxsw_sp1_kvdl_part** %2, align 8
  %8 = getelementptr inbounds %struct.mlxsw_sp1_kvdl_part, %struct.mlxsw_sp1_kvdl_part* %7, i32 0, i32 1
  store %struct.mlxsw_sp1_kvdl_part_info* %8, %struct.mlxsw_sp1_kvdl_part_info** %3, align 8
  store i32 -1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %9 = load %struct.mlxsw_sp1_kvdl_part_info*, %struct.mlxsw_sp1_kvdl_part_info** %3, align 8
  %10 = getelementptr inbounds %struct.mlxsw_sp1_kvdl_part_info, %struct.mlxsw_sp1_kvdl_part_info* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.mlxsw_sp1_kvdl_part_info*, %struct.mlxsw_sp1_kvdl_part_info** %3, align 8
  %13 = getelementptr inbounds %struct.mlxsw_sp1_kvdl_part_info, %struct.mlxsw_sp1_kvdl_part_info* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = sub nsw i32 %11, %14
  %16 = add nsw i32 %15, 1
  %17 = load %struct.mlxsw_sp1_kvdl_part_info*, %struct.mlxsw_sp1_kvdl_part_info** %3, align 8
  %18 = getelementptr inbounds %struct.mlxsw_sp1_kvdl_part_info, %struct.mlxsw_sp1_kvdl_part_info* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = sdiv i32 %16, %19
  store i32 %20, i32* %4, align 4
  br label %21

21:                                               ; preds = %31, %1
  %22 = load %struct.mlxsw_sp1_kvdl_part*, %struct.mlxsw_sp1_kvdl_part** %2, align 8
  %23 = getelementptr inbounds %struct.mlxsw_sp1_kvdl_part, %struct.mlxsw_sp1_kvdl_part* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* %5, align 4
  %27 = add nsw i32 %26, 1
  %28 = call i32 @find_next_bit(i32 %24, i32 %25, i32 %27)
  store i32 %28, i32* %5, align 4
  %29 = load i32, i32* %4, align 4
  %30 = icmp ult i32 %28, %29
  br i1 %30, label %31, label %37

31:                                               ; preds = %21
  %32 = load %struct.mlxsw_sp1_kvdl_part_info*, %struct.mlxsw_sp1_kvdl_part_info** %3, align 8
  %33 = getelementptr inbounds %struct.mlxsw_sp1_kvdl_part_info, %struct.mlxsw_sp1_kvdl_part_info* %32, i32 0, i32 2
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* %6, align 4
  %36 = add nsw i32 %35, %34
  store i32 %36, i32* %6, align 4
  br label %21

37:                                               ; preds = %21
  %38 = load i32, i32* %6, align 4
  ret i32 %38
}

declare dso_local i32 @find_next_bit(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
